Attempting to fix scrollbar hiding legend

--- a/templates_style.css
+++ b/templates_style.css
@@ -87,3 +87,9 @@ input[type=search]:focus, textarea:focus {
   background-color: rgba(99, 21, 21, 0.9); 
   color: rgba(255, 255, 255, 0.9) !important;
 }
+
+iframe {
+  height: 100%;
+  width: 75%;
+position: absolute; 
+}
